<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Societly</string>
    <string name="label_reset">Restart</string>
    <string name="hint_yes">Agree</string>
    <string name="hint_no">Disagree</string>
    <string name="hint_skip">Skip</string>
    <string name="hint_neutral">Neutral</string>
    <string name="content_desc_previous">Previous</string>
    <string name="content_desc_next">Next</string>
    <string name="label_button_start">Start</string>
    <string name="text_tutorial_center">Swipe the card to give your opinion</string>
    <string name="label_reset_hard">Reset hard</string>
    <string name="title_toolbar_position">%1$s/%2$s</string>
    <string name="label_continue">Continue</string>
    <string name="text_skip_email">You can skip this step</string>
    <string name="hint_email">Email</string>
    <string name="error_init_app_data">An error occurred, please try again in a moment</string>
    <string name="text_landing_page">Find out your presidential candidate of 2016</string>
    <string name="text_landing_page_small">Take a few minutes to inform yourself where you stand relative to the candidates.</string>
    <string name="error_candidate_not_found">Candidate not found</string>
    <string name="error_unanswered_questions">Some questions have not been answered</string>
    <string name="text_candidate_overview_you">You</string>
    <string name="text_reset_questionnaire">You can reset this candidate list and start again with the questionnaire.</string>
    <string name="text_reset_confirm">Restarting will clear all your answers. Do you want to continue?</string>
    <string name="label_confirm_yes">yes</string>
    <string name="label_confirm_no">no</string>
    <string name="title_results">Results</string>
    <string name="title_comparison">Comparison</string>
    <string name="label_button_skip">@string/hint_skip</string>
    <string name="text_or">or</string>
    <string name="hint_password">Password</string>
    <string name="label_btn_sign_in">Sign in</string>
    <string name="label_btn_sign_up">Sign up</string>
    <string name="label_btn_sign_in_facebook">Sign in with facebook</string>
    <string name="label_btn_sign_in_google">Sign in with Google</string>
    <string name="label_btn_sign_up_facebook">Sign up with facebook</string>
    <string name="label_btn_sign_up_google">Sign up with Google</string>
    <string name="hint_spinner_state">Pick a state</string>
    <string name="hint_spinner_district">Pick a district</string>
    <string name="title_results_country">Presidential</string>
    <string name="title_results_state">Senate</string>
    <string name="title_results_district">House of Representatives</string>
    <string name="error_facebook_auth">Facebook login error</string>
    <string name="error_google_auth">Google login error</string>
    <string name="error_login_auth">Incorrect email or password</string>
    <string name="text_empty_results_state">No candidates running for senate in this state.</string>
    <string name="text_logout_confirm">Are you sure you want to log out?</string>
    <string name="text_resubmit_confirm">Submitting results failed. Try again?</string>
    <string name="text_loading_dialog">Loading…</string>
</resources>
