<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    style="@style/QuestionCard"
    android:id="@+id/question_card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <mobi.lab.societly.ui.TypefaceTextView
            android:id="@+id/text_hint_yes"
            style="@style/QuestionHint.Top"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/hint_yes" />

        <mobi.lab.societly.ui.TypefaceTextView
            android:id="@+id/text_hint_no"
            style="@style/QuestionHint.Top"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/hint_no" />

        <mobi.lab.societly.ui.TypefaceTextView
            android:id="@+id/text_hint_skip"
            style="@style/QuestionHint.Top"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/hint_skip" />

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/padding_question_logo_top"
            android:layout_marginBottom="@dimen/padding_question_logo_bottom"
            android:src="@drawable/img_logo_small" />

        <mobi.lab.societly.ui.TypefaceTextView
            android:id="@+id/text_hint_neutral"
            style="@style/QuestionHint"
            android:layout_above="@id/img_logo"
            android:layout_centerHorizontal="true"
            android:text="@string/hint_neutral" />

        <mobi.lab.societly.ui.EllipsizingTextView
            android:id="@+id/text_question"
            style="@style/Question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_hint_skip"
            android:layout_above="@id/text_hint_neutral" />

    </RelativeLayout>

</android.support.v7.widget.CardView>
